# hermes-skill-mcp-plugin

./: .gitignore  BDD.md  Dockerfile.test  IMPLEMENTATION_PLAN.md  README.md  __init__.py  _config.py  _connection.py  _security.py  _skill_view_hook.py  _tool_handler.py  docker-compose.test.yml  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
.sisyphus/: ralph-loop.local.md
.sisyphus/plans/: production-readiness-v1.md  production-readiness-v2.md  ultrawork-production-readiness.md
fixtures/secret_skill/: mcp.yaml
hermes_skill_mcp/: __init__.py  __main__.py  _connection.py  _skill_view_hook.py  _tool_handler.py  plugin.yaml
src/hermes_skill_mcp/: __main__.py  _config.py  _connection.py  _metadata.py  _security.py  _skill_view_hook.py  _tool_handler.py  plugin.yaml
tests/: conftest.py  constants.py  test_config.py  test_connection.py  test_e2e.py  test_edge_cases.py  test_hermes_api_contract.py  test_plugin_entry.py  test_security.py  test_skill_mcp.py  test_skill_view_hook.py  test_tool_handler.py
